# libvox

./: CMakeLists.txt  CMakeLists.txt.old
include/: define.cpp
include/metal-cpp/: Metal.hpp
src/: app.cpp  app.hpp  libvox.cpp  main.cpp
src.old/: app.cpp  app.hpp  main.cpp
src.old/model/: vertex_data.hpp
src.old/util/: logger.cpp
